<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ProfileFragment"
    >

    <data>
        <variable
            name="accountSharedViewModel"
            type="br.google.developer.adogtme.views.AccountViewModel" />

        <variable
            name="fragment"
            type="br.google.developer.adogtme.fragments.ProfileFragment" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:paddingVertical="48dp"
            android:paddingHorizontal="24dp">
            <com.google.android.material.imageview.ShapeableImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:tint="@color/black"
                app:srcCompat="@drawable/ic_chevron_left_42dp"
                android:onClick="@{() -> fragment.goBack()}"
                />
            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/avatar"
                android:layout_width="240dp"
                android:layout_height="240dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_gravity="center_horizontal"
                />
        </LinearLayout>



        <LinearLayout
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:gravity="top"
            android:padding="24dp">
                <com.google.android.material.button.MaterialButton
                android:text="@string/my_adoptions"
                android:paddingVertical="16dp"
                android:paddingHorizontal="32dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                app:layout_constraintTop_toBottomOf="@+id/btnSignUp"
                app:layout_constraintStart_toStartOf="parent"
                android:textColor="@color/black"
                android:backgroundTint="@color/white"
                android:onClick="@{() -> fragment.handleGoToMyAdoptionRequests()}"
                />
                <com.google.android.material.button.MaterialButton
                    android:text="@string/edit_data"
                    android:paddingVertical="16dp"
                    android:paddingHorizontal="32dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    app:layout_constraintTop_toBottomOf="@+id/btnSignUp"
                    app:layout_constraintStart_toStartOf="parent"
                    android:textColor="@color/black"
                    android:backgroundTint="@color/white"
                    android:onClick="@{() -> fragment.handleGoToEditAccount()}"

                    />
                <com.google.android.material.button.MaterialButton
                    android:text="@string/logout"
                    android:paddingVertical="16dp"
                    android:paddingHorizontal="32dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    app:layout_constraintTop_toBottomOf="@+id/btnSignUp"
                    app:layout_constraintStart_toStartOf="parent"
                    android:textColor="@color/white"
                    android:backgroundTint="@color/teal_700"
                    android:drawableLeft="@drawable/ic_exit_42dp"
                    android:drawableTint="@color/white"
                    android:onClick="@{() -> fragment.handleSignOut()}"

                    />
        </LinearLayout>
    </LinearLayout>
</layout>